fixed text spacing project

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1174,6 +1174,10 @@ main,
     object-position: center;
 }
 
+.work-project p{
+    margin-bottom: 15px;
+}
+
 .page-about .image{
     margin: 0 0 30px;
     clip-path: polygon( 0.081% 98.218%,0.832% 98.218%,0.832% 98.882%,1.574% 98.882%,1.574% 99.437%,2.46% 99.437%,2.46% 100%,97.621% 100%,97.621% 99.437%,98.507% 99.437%,98.507% 98.882%,99.249% 98.882%,99.249% 98.218%,100% 98.218%,100% 1.782%,99.248% 1.782%,99.248% 1.119%,98.506% 1.119%,98.506% 0.563%,97.621% 0.563%,97.621% 0.005%,2.46% 0.005%,2.46% 0.563%,1.574% 0.563%,1.574% 1.119%,0.832% 1.119%,0.832% 1.782%,0.081% 1.782%,0.081% 98.218% );
@@ -1833,6 +1837,7 @@ main,
 
     .work-project .image img{
         height: 400px;
+        margin-bottom: 40px;
     }
 
     .page-about{
